# quill-art

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  imgui.ini
.zed/: settings.json
assets/themes/: dark.json  light.json
lib/: FileLockFactory.hpp  FileLockStrategy.hpp  WindowsFileLock.hpp
src/: file.hpp  main.cpp
src/app/: Application.cpp  Application.hpp  application.cpp  application.hpp
src/app/ui/: application.cpp
src/svg/: canvas.hpp
src/svg/containers/: canvas.cpp  canvas.hpp  g.cpp  g.hpp
src/svg/shapes/: circle.cpp  circle.hpp  line.cpp  line.hpp  path.cpp  path.hpp  rect.cpp  rect.hpp  shape.hpp
src/tools/: PenTool.hpp  Tool.cpp  Tool.hpp  demo.cpp
src/ui/: MainWindow.cpp  MainWindow.h  MainWindow.hpp  main.c  window.cpp
toolchains/: linux.cmake  macos.cmake  windows.cmake
